--- a/custom_components/loock_lock_extend/manifest.json
+++ b/custom_components/loock_lock_extend/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "loock_lock_extend",
-  "name": "loock门锁扩展",
+  "name": "Loock门锁扩展",
   "codeowners": ["@zcmk123"],
   "config_flow": false,
   "dependencies": [],
